# multilayered_game_of_life

./: CMakeLists.txt  README.md
src/: config.hpp  draw.hpp  main.cpp  rules.hpp
